--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.2",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "dns": "^0.2.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "micro": "^10.0.1",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.2",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
+    "next-reveal": "^1.0.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
+    "stripe": "^12.8.0",
+    "styled-components": "^5.3.11",
     "tailwindcss": "3.3.2"
   }
 }
